# ZPG-project

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: App.h  Callbacks.h  Camera.h  Hud.h  Light.h  Mesh.h  Model.h  Object.h  Observer.h  Renderer.h  Scene.h  SceneManager.h  Shader.h  Texture.h  Trans.h  Vao.h  Vbo.h  Window.h
include/scenes/: BallScene.h  OpenWorldScene.h
lib/: gltext.h
models/: bush.h  cube.h  floor.h  gift.h  plain.h  skybox.h  sphere.h  suzi_flat.h  suzi_smooth.h  tree.h
shaders/: 4_hezke_koule.fs  4_hezke_koule.fsh  4_hezke_koule.vs  base.vsh  basic_light.fs  basic_light.vs  box_regular.vs  box_wild.vs  crosshair.fsh  crosshair.vsh  cutLight.fs  floor.fs  floor.fsh  floor.vs  gouraud.fs  gouraud.fsh  gouraud.vs  gouraud.vsh  light.fs  light.fsh  light.vs  multilight.fs  multilight.fsh  normal_mapping.fsh  normal_mapping.vsh  simpleShader.fsh  simpleShader.vsh  skybox.fsh  skybox.vsh  textured_light.fsh  textured_light.vsh  treeShader.fs  treeShader.fsh  treeShader.vs  treeShader.vsh  uncutLight.fs
src/: App.cpp  App.h  Callbacks.cpp  Camera.cpp  Hud.cpp  Light.cpp  Mesh.cpp  Model.cpp  Object.cpp  Observer.cpp  Renderer.cpp  Renderer.h  Scene.cpp  SceneManager.cpp  Shader.cpp  ShaderObject.cpp  ShaderObject.h  Texture.cpp  Trans.cpp  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  Window.cpp  Window.h
src/scenes/: BallScene.cpp  OpenWorldScene.cpp
